Lot of empty spaces displayed in collapse mode of FAQ (data representation in website and UI is different and If the FAQ preview consist of images then in expanded mode, the images are not displayed properly, even the preview is coming out of the box issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -11899,10 +11899,21 @@ padding-right: 0;
     word-wrap: break-word;
 }
 .searchAssist-kore-chat-window .tile-with-text-parent .tile-with-text .tile-description img{
-    width: 100%;
+    width: 90%;
 }
 .searchAssist-kore-chat-window .tile-description img{
-    width: 100%;
+    width: 90%;
+    display: block;
+    margin: auto;
+}
+.searchAssist-kore-chat-window  .tile-description {
+height: 16px;
+}
+.searchAssist-kore-chat-window .panel .tile-description {
+height: inherit;
+}
+.searchAssist-kore-chat-window .panel .desc-text-img img, .searchAssist-kore-chat-window .panel .desc-text img{
+    width: 90%;
     display: block;
     margin: auto;
 }
